--- a/supervisord.conf
+++ b/supervisord.conf
@@ -4,7 +4,7 @@ nodaemon=true
 user=root
 
 [program:fastapi]
-command=/usr/local/bin/pipenv run python main.py
+command=/usr/local/bin/python3 main.py
 stdout_logfile=/dev/stdout
 stdout_logfile_maxbytes=0
 stderr_logfile_maxbytes=0
